测试动画小demo

--- a/移动端/移动端js部分/动画小demo/index.html
+++ b/移动端/移动端js部分/动画小demo/index.html
@@ -28,8 +28,15 @@
             left: 50%;
             margin-left: -124px;
         }
+        #first-page .wording-cover{
+            width: 185px;
+            position: absolute;
+            top: 350px;
+            left: 50%;
+            margin-left: -92.5px;
+        }
         .moveFromTop{
-            animation: moveFromTop 0.6s ease forwards;
+            animation: moveFromTop .6s ease forwards;
         }
         @keyframes moveFromTop{
             0%{
@@ -45,7 +52,7 @@
     <div id="container">
         <div id="first-page">
             <img class="cover moveFromTop" src="./img/cover.png" alt="">
-            <!-- <img class="wording-cover" src="./img/wording_cover.png" alt=""> -->
+            <img class="wording-cover" src="./img/wording_cover.png" alt="">
             <!-- <img class="icon-up" src="./img/icon_up.png" alt=""> -->
         </div>
 
