--- a/移动端/动画的测试.html
+++ b/移动端/动画的测试.html
@@ -12,13 +12,14 @@
             background: #f00;
             
             /* forwards回到动画结束时的状态 */
-            animation: run 2s ease 2s forwards;
+            animation: run 2s ease forwards;
         }
 
         @keyframes run{
             /* 可以使用from  to或者使用百分比 */
             /* 百分之零是动画的初始状态，然后使用动画运动的这个状态 */
-            0%{
+            /* 如果没有初始值就默认是当前元素的样式 */
+            100%{
                 width: 50px;
             }
             /* 100%{ */
