--- a/移动端/移动端js部分/动画小demo/index.html
+++ b/移动端/移动端js部分/动画小demo/index.html
@@ -33,10 +33,19 @@
     <script>
         //设置一个全局变量用来记录当前是哪一个页面
         var iNow=1;
+
+
         //获取整个document页面，在document上面绑定一个上滑事件
         $(document).on("swipeUp",function(){
             $("#page-"+iNow).attr("class","moveToTop");
             $("#page-"+(iNow+1)).attr("class","moveFromBottom");
+            iNow++;
+        });
+
+        $(document).on("swipeDown",function(){
+            // console.log("asjch");
+            $("#page-"+iNow).attr("class","moveToBottom");
+            $("#page-"+(iNow-1)).attr("class","moveFromTop");
         });
     </script>
 
