--- a/移动端/移动端js部分/动画小demo/index.html
+++ b/移动端/移动端js部分/动画小demo/index.html
@@ -18,14 +18,40 @@
             <img class="icon-up moveFromBottom" src="./img/icon_up.png" alt="">
         </div>
         <div id="page-2" class="hidden">
-            <img class="wording moveFromBottom" src="./img/wording.png" alt="">
-            <img class="circle moveCircle" src="./img/circle.png" alt="">
-            <img class="floating-deve moveScale" src="./img/floating_develop.png" alt="">
-            <img class="people moveFromLeft" src="./img/people.png" alt="">
-            <img class="check-deve moveScale" src="./img/check_develop.png" alt="">
+            <img class="wording moveFromBottom hidden" src="./img/wording.png" alt="">
+            <img class="circle moveCircle hidden" src="./img/circle.png" alt="">
+            <img class="floating-deve moveScale hidden" src="./img/floating_develop.png" alt="">
+            <img class="people moveFromLeft hidden" src="./img/people.png" alt="">
+            <img class="check-deve moveScale hidden" src="./img/check_develop.png" alt="">
+            <img class="dot1 moveScale hidden" src="./img/dot1.png" alt="">
+            <img class="icon-up moveFromIcon hidden" src="./img/icon_up.png" alt="">
+        </div>
+        <div id="page-3" class="hidden">
+            <img class="wording-desi moveFromBottom" src="./img/wording_design.png" alt="">
+            <img class="circle-desi moveCircle" src="./img/circle-design.png" alt="">
+            <img class="floating-desi moveScale" src="./img/floating_design.png" alt="">
+            <img class="people-desi moveFromBottom" src="./img/people_design.png" alt="">
+            <img class="check-desi moveScale" src="./img/check_design.png" alt="">
             <img class="dot1 moveScale" src="./img/dot1.png" alt="">
             <img class="icon-up moveFromIcon" src="./img/icon_up.png" alt="">
         </div>
+
+        <div id="page-4" class="hidden">
+            <img class="wording-pro moveFromBottom" src="./img/wording_production.png" alt="">
+            <img class="circle-pro moveCircle" src="./img/circle-production.png" alt="">
+            <img class="floating-pro moveScale" src="./img/floating_production.png" alt="">
+            <img class="people-pro moveFromLeft" src="./img/people_production.png" alt="">
+            <img class="pic-shadow-pro" src="./img/pic_shadow_production.png" alt="">
+            <img class="check-pro moveScale" src="./img/check_production.png" alt="">
+            <img class="dot1 moveScale" src="./img/dot1.png" alt="">
+            <img class="icon-up moveFromIcon" src="./img/icon_up.png" alt="">
+        </div>
+
+        <div id="page-5" class="hidden">
+            <img class="pic-back moveFromBottom" src="./img/pic_back.png" alt="">
+            <img class="btn-join moveScale" src="./img/btn_join.png" alt="">
+        </div>
+
     </div>
 
     <script src="../zepto.js"></script>
@@ -37,15 +63,52 @@
 
         //获取整个document页面，在document上面绑定一个上滑事件
         $(document).on("swipeUp",function(){
+            if(iNow==5){
+                return;
+            }
+            //使当前页面的class属性的属性值为moveToTop,
             $("#page-"+iNow).attr("class","moveToTop");
+            //使当前页面的class属性的属性值为moveFromBottom,
             $("#page-"+(iNow+1)).attr("class","moveFromBottom");
-            iNow++;
+
+            //给当前的元素的子元素加上hidden类属性
+            $("#page-"+iNow).children().addClass("hidden");
+
+            setTimeout(function(){
+                //在.6秒之后移除下一个页面子元素的hidden类样式
+                $("#page-"+(iNow+1)).children().removeClass("hidden");
+
+                $("#page-"+iNow).attr("class","hidden");
+
+                //由于页面向上滑动，页面计数器加一
+                iNow++;
+                console.log(iNow);
+
+            },600);
         });
 
         $(document).on("swipeDown",function(){
             // console.log("asjch");
+            if(iNow==1){
+                return;
+            }
             $("#page-"+iNow).attr("class","moveToBottom");
             $("#page-"+(iNow-1)).attr("class","moveFromTop");
+
+            //给当前元素的子元素加上类属性
+            $("#page-"+iNow).children().addClass("hidden");
+
+            setTimeout(function(){
+                //在.6秒之后移除上一个元素的hidden类样式
+                $("#page-"+(iNow-1)).children().removeClass("hidden");
+
+                $("#page-"+iNow).attr("class","hidden");
+
+                //由于页面向下滑动，页面计数器减一
+
+                iNow--;
+                console.log(iNow);
+            },600);
         });
     </script>
 
