移动端美团高仿

--- a/移动端/移动端js部分/移动端美团高仿/index.html
+++ b/移动端/移动端js部分/移动端美团高仿/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +12,7 @@
 
     <script src="../../rem.js"></script>
 </head>
+
 <body>
     <div id="container">
         <div id="header">
@@ -19,14 +21,106 @@
                 <i class="iconfont icon-xiajiantou"></i>
             </div>
             <div class="search">
-                <div class="search-ico"></div>
-                <input type="text" placeholder="输入商家/品类商圈">
+                <i class="iconfont icon-sousuo"></i>
+                <input class="search-input" type="text" placeholder="输入商家/品类/商圈">
             </div>
             <div class="profile">
-                <div class="profile-ico"></div>
+                <i class="iconfont icon-wode"></i>
                 <span>我的</span>
             </div>
         </div>
+
+        <div id="banner">
+            <img class="banner-img" src="http://ms0.meituan.net/touch/img/download_banner.png" alt="">
+            <a class="open-app" href="#"></a>
+            <a class="download-app" href="#"></a>
+        </div>
+
+        <div id="product-list">
+            <ul>
+                <li>
+                    <a href="#">
+                        <div class="icon-container" style="background: #fd9d21;">
+                            <i class="iconfont icon-shaozikuaizi"></i>
+                        </div>
+                        <span>美食</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <div class="icon-container" style="background: #ff6767;">
+                            <i class="iconfont icon-maoyan"></i>
+                        </div>
+                        <span>猫眼电影</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <div class="icon-container" style="background: #8a90fa;">
+                            <i class="iconfont icon-jiudian"></i>
+                        </div>
+                        <span>酒店</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <div class="icon-container" style="background: #fed030;">
+                            <i class="iconfont icon-xiuxianyule"></i>
+                        </div>
+                        <span>休闲娱乐</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <div class="icon-container" style="background: #fd9d21;">
+                            <i class="iconfont icon-waimai"></i>
+                        </div>
+                        <span>外卖</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <div class="icon-container" style="background: #fed030;">
+                            <i class="iconfont icon-ktv"></i>
+                        </div>
+                        <span>KTV</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <div class="icon-container" style="background: #4dc6ee;">
+                            <i class="iconfont icon-zhoubianyou"></i>
+                        </div>
+                        <span>周边游</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <div class="icon-container" style="background: #ff80c2;">
+                            <i class="iconfont icon-liren"></i>
+                        </div>
+                        <span>丽人</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <div class="icon-container" style="background: #fd9d21;">
+                            <i class="iconfont icon-xiaochikuaican"></i>
+                        </div>
+                        <span>小吃快餐</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <div class="icon-container" style="background: #599eec;">
+                            <i class="iconfont icon-huochepiao"></i>
+                        </div>
+                        <span>火车票</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
 </body>
+
 </html>
