移动端美团高仿

--- a/移动端/移动端js部分/移动端美团高仿/index.html
+++ b/移动端/移动端js部分/移动端美团高仿/index.html
@@ -36,8 +36,8 @@
             <a class="download-app" href="#"></a>
         </div>
 
-        <div id="product-list">
-            <ul>
+        <div id="product">
+            <ul class="product-list">
                 <li>
                     <a href="#">
                         <div class="icon-container" style="background: #fd9d21;">
@@ -116,6 +116,86 @@
                             <i class="iconfont icon-huochepiao"></i>
                         </div>
                         <span>火车票</span>
+                    </a>
+                </li>
+            </ul>
+            <ul class="product-nav">
+                <li class="active"></li>
+                <li></li>
+            </ul>
+        </div>
+
+        <div id="guess-like">
+            <div class="text">猜你喜欢</div>
+            <ul class="like-list">
+                <li>
+                    <a href="">
+                        <img src="http://p0.meituan.net/200.0/dpdeal/41fad3cc358ce6774dceefc81ce00cc0114799.jpg" alt="">
+                        <div class="content">
+                            <div class="title">马迭尔商务会馆</div>
+                            <div class="description">[中央大街索菲亚广场]单人洗浴门票+日式汗蒸</div>
+                            <div class="price">
+                                <span class="current-pri">49元</span>
+                                <span class="last-pri">门市价:69元</span>
+                                <span class="items">已售58278</span>
+                            </div>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                            <img src="http://p1.meituan.net/200.0/dpdeal/20915af9fde6f42fb183db5da6fce83b217971.jpg" alt="">
+                            <div class="content">
+                                <div class="title">金紫荆商务会馆</div>
+                                <div class="description">[和兴路沿线]单人洗浴+浴品+汗蒸+大厅休息（可过夜）+早餐</div>
+                                <div class="price">
+                                    <span class="current-pri">29元</span>
+                                    <span class="last-pri">门市价:29元</span>
+                                    <span class="items">已售28258</span>
+                                </div>
+                            </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                            <img src="http://p1.meituan.net/200.0/deal/ce2be0ce6f3925d2d612843b510ef1b245988.jpg@75_0_450_450a%7C267h_267w_2e_90Q" alt="">
+                            <div class="content">
+                                <div class="title">上菜下饭</div>
+                                <div class="description">[中央大街索菲亚广场]午餐特色盒饭，建议单人使用</div>
+                                <div class="price">
+                                    <span class="current-pri">9.9元</span>
+                                    <span class="last-pri">门市价:12元</span>
+                                    <span class="items">已售32140</span>
+                                </div>
+                            </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                            <img src="http://p1.meituan.net/200.0/dpdeal/3b82238a217b0b550f6f03da0f619d99105757.jpg" alt="">
+                            <div class="content">
+                                <div class="title">明洞汗蒸幕</div>
+                                <div class="description">[果戈里/革新街]单人闲时洗浴+汗蒸门票（不含毛巾袜子）</div>
+                                <div class="price">
+                                    <span class="current-pri">15.9元</span>
+                                    <span class="last-pri">门市价:49元</span>
+                                    <span class="items">已售20939</span>
+                                </div>
+                            </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                            <img src="http://p1.meituan.net/200.0/deal/7ae6512dec08699805363a642d2a61ca44542.jpg" alt="">
+                            <div class="content">
+                                <div class="title">韩盛炭火自助烤肉</div>
+                                <div class="description">[服装城/学府路]双人自助午餐</div>
+                                <div class="price">
+                                    <span class="current-pri">125.8元</span>
+                                    <span class="last-pri">门市价:196元</span>
+                                    <span class="items">已售9725</span>
+                                </div>
+                            </div>
                     </a>
                 </li>
             </ul>
