--- a/移动端/移动端js部分/移动端美团高仿/index.html
+++ b/移动端/移动端js部分/移动端美团高仿/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./index.css">
     <link rel="stylesheet" href="./font-icon/iconfont.css">
 
-    <script src="../../rem.js"></script>
+    <script src="./rem.js"></script>
 </head>
 
 <body>
