判断一个单词是不是回文

--- a/面试题练习/判断一个单词是否是回文.html
+++ b/面试题练习/判断一个单词是否是回文.html
@@ -34,6 +34,17 @@
         }
         console.log(isHuiwen(str));
         */
+
+        var str="asdfghj";
+        //测试字符串的split函数
+        //可以把字符串中的每个字符分割成为一个数组
+        // console.log(str.split(""));
+        var arr=[2,35,6,74,6,8,4]
+        //测试数组里里面的的reverse()函数
+        console.log(arr.reverse());
+        //测试数组里面的join()方法，其是和字符串俩面的
+        // split（）函数是相对应的；
+        // console.log(arr.join("****"));
     </script>
 </body>
 </html>
