--- a/面试题练习/找出正数组的最大差值.html
+++ b/面试题练习/找出正数组的最大差值.html
@@ -16,9 +16,9 @@
         // 然后做差值得到最大差值；
 
         function maxResult(arr){
-            var max=arr[0];
-            var min=arr[0];
-            for(var i=1; i<arr.length; ++i){
+            var max;
+            var min;
+            /*for(var i=1; i<arr.length; ++i){
                 // var temp;
                 if(max<arr[i]){
                     max=arr[i];
@@ -26,7 +26,12 @@
                 if(min>arr[i]){
                     min=arr[i];
                 }
-            }
+            }*/
+            arr.sort(function(a,b){
+                return a-b;
+            });
+            max=arr[arr.length-1];
+            min=arr[0];
             return max-min;
         }
 
