扩展运算符

--- a/ES6基础/扩展运算符.html
+++ b/ES6基础/扩展运算符.html
@@ -7,20 +7,78 @@
     <title>扩展运算符</title>
 </head>
 <body>
-    
+    <ul>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+        <li>4</li>
+        <li>5</li>
+    </ul>
 
     <script>
         // 扩展运算符复制数组
-        let arr=[1,2,45,6];
+        // let arr=[1,2,45,6];
         // let arr2=arr;
         // arr2[2]=100;
         // console.log(arr);
         //对数组进行扩展
-        let arr2=[...arr];
-        arr2[2]=100;
-        console.log(arr2);
-        //可以发现arr没有进行改变，还是原来的值；
-        console.log(arr);
+        // let arr2=[...arr];
+        // arr2[2]=100;
+        // console.log(arr2);
+        // 可以发现arr没有进行改变，还是原来的值；
+        // console.log(arr);
+
+
+        //合并数组
+        let arr1=[12,34,34,53];
+        let arr2=[54,34,23,532,32];
+        // console.log([...arr1,...arr2]);
+        //扩展运算符对于数组就是把数组分解成一个一个的数字项；
+        // console.log(...arr2);
+
+
+        let obj={
+            name: "wang",
+            age: 34,
+            say:()=>{
+                console.log("hello");
+            }
+        }
+        let obj2={
+            name: "cdajkc",
+            age: 34,
+            weight: 180,
+            eat:()=>{
+                console.log("world");
+            }
+        }
+        //可以对对象使用扩展运算符，合并对象
+        // console.log({...obj,...obj2});
+
+
+        //可以使用扩展运算符是类数组转化为正常的数组
+        var aLi=document.getElementsByTagName("li");
+        // console.log(aLi);
+        let arr=[...aLi];
+        // console.log(arr)
+
+
+        //函数的arguments的使用
+        function fn(){
+            console.log(arguments);
+            var arr=[...arguments];
+            //也可以使用扩展运算符把arguments类数组转化为真正的数组
+            console.log(arr);
+        }
+        // fn(13,45,24,52,254,252,2);
+
+        //rest扩展符的使用
+        // 注意rest是用于接收剩余的参数的
+        function fn2(a,b,...rest){
+            console.log(arguments);
+            console.log(rest);
+        }
+        fn2(13,45,24,52,254,252,2);
     </script>
 </body>
 </html>
