--- a/ES6基础/解构赋值.html
+++ b/ES6基础/解构赋值.html
@@ -35,6 +35,9 @@
         // let [a,b,c,d]="1234";
         // console.log(a,b,c,d);
         
+
+        //对象的解构赋值
+        
     </script>
 </body>
 </html>
