--- a/ES6基础/解构赋值.html
+++ b/ES6基础/解构赋值.html
@@ -36,8 +36,13 @@
         // console.log(a,b,c,d);
         
 
-        //对象的解构赋值
-        
+        let a=(a,b,c,d)=>{
+
+        }
+
+        console.log(a.name);
+        console.log(a.length);
+
     </script>
 </body>
 </html>
