--- a/ES6基础/解构赋值.html
+++ b/ES6基础/解构赋值.html
@@ -40,8 +40,20 @@
 
         }
 
-        console.log(a.name);
-        console.log(a.length);
+        // console.log(a.name);
+        // console.log(a.length);
+
+        //两个数的交换 
+        let x=10;
+        let y=20;
+        // 不借助临时变量，是数组的结构方法进行赋值
+        // [x,y]=[y,x];
+        // console.log(x,y);
+
+        x=x+y;
+        y=x-y;
+        x=x-y;
+        console.log(x,y);
 
     </script>
 </body>
