--- a/ES6基础/async的使用.html
+++ b/ES6基础/async的使用.html
@@ -15,7 +15,7 @@
         async function fn(){
             console.log("请求1开始");
             // await表示在这个语句是会停止
-            // 返回值是后面的异步操作的成功的回调函数resolve的参数
+            // 返回值是后面的异步操作的成功回调函数resolve的参数
             let a=await req1();
             console.log(a);
             console.log("请求2开始");
@@ -23,6 +23,8 @@
             console.log(b);
         }
 
+        // 注意async异步函数的返回值是一个Promise对象
+        // 这个Promise对象中包含了一些异步操作代码
         async function req1(){
             return new Promise((resolve,reject)=>{
                 console.log("请求1成功");
