--- a/webpack/src/index.html
+++ b/webpack/src/index.html
@@ -7,7 +7,7 @@
     <title>index.html</title>
 </head>
 <body>
-    <p>这是一段文字</p>
+    <p>这是一段文字ewrtyu</p>
     
     <script src="./index.js"></script>
 </body>
