--- a/webpack/src/index.html
+++ b/webpack/src/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>这是一段文字ewrtyu</p>
-    
+    <img src="./images/shuqian.gif" alt="">
     <script src="./index.js"></script>
 </body>
 </html>
