--- a/demo.html
+++ b/demo.html
@@ -41,12 +41,12 @@
             <!-- v-bind:class="{isActive?actvie:'', selected}" -->
             <tr v-for="(item,index) in productList" @click="toggleClass(item.price,$event)">
                 <td><input type="checkbox" v-bind:value="item.name" :name="item.name" v-model="selectedArr"></td>
-                <td><button @click="deleteSelected(item.name)">X</button></td>
+                <td><button @click.stop="deleteSelected(item.name)">X</button></td>
                 <td>{{item.name}}</td>
                 <td>{{item.price}}</td>
             </tr>
             <tr>
-                <td><button @click="deleteAllSelected">删除选中</button></td>
+                <td><button @click.stop="deleteAllSelected">删除选中</button></td>
                 <td rowspan="3">sum: {{sum}}</td>
             </tr>
             {{selectedArr}}
